# red-mountain-resize

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
src/: carve.rs  change.rs  config.rs  debug.rs  energy.rs  grid.rs  grow.rs  lib.rs  math.rs  newgrid.rs  point.rs  point_stack.rs  shrink.rs
tests/: carve.rs  grid.rs  math.rs
